# ItcastGameServer

./: CMakeLists.txt  Dockerfile  make.sh
proto/: msg.proto
src/: AOI_World.cpp  AOI_World.h  GameChannel.cpp  GameChannel.h  GameMsg.cpp  GameMsg.h  GameProtocol.cpp  GameProtocol.h  GameRole.cpp  GameRole.h  RandomName.cpp  RandomName.h  WorldManager.cpp  WorldManager.h  ZinxTimer.cpp  ZinxTimer.h  main.cpp  zinx.cpp
